KUBER-35/kubernetes-basics/22.5-kuber-1.5/config/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: networking-in-k8s-part2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
