KUBER-35/kubernetes-basics/22.5-kuber-1.5/config/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: networking-in-k8s-part2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:1.26
