KUBER-35/kubernetes-basics/22.5-kuber-1.5/config/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
  namespace: networking-in-k8s-part2
spec:
  ports:
    - name: multitool
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: back
