KUBER-35/kubernetes-basics/22.5-kuber-1.5/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: networking-in-k8s-part2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-frontend
              port:
                name: nginx
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: service-backend
              port:
                name: multitool
